track only nodes that failed to perform noop allocations